feat(playlist): implement playlist feature (#24)

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -37,7 +37,68 @@
     },
     "common": {
         "library": "Library",
+        "playlist": "Playlist",
+        "now-playing": "Now Playing",
         "unknown-genre": "Unknown Genre",
-        "unknown-album": "Unknown Album"
+        "unknown-album": "Unknown Album",
+        "musicWithCount_other": "{{count}} Musics",
+        "musicWithCount_one": "{{count}} Music",
+        "selectedCount_other": "{{count}} Items Selected",
+        "selectedCount_one": "{{count}} Item Selected",
+        "clear": "Clear",
+        "create": "Create",
+        "cancel": "Cancel",
+        "delete": "Delete",
+        "open": "Open",
+        "add": "Add",
+        "rename": "Rename",
+        "play-all": "Play All",
+        "play-selected": "Play Selected",
+        "shuffle-all": "Shuffle All"
+    },
+    "playlist": {
+        "create": {
+            "title": "Create Playlist",
+            "description": "Please enter the name of the playlist.",
+            "placeholder": "Playlist Name",
+            "pending": "Creating the playlist...",
+            "success": "The playlist has been created.",
+            "error": "Failed to create the playlist.",
+            "errors": {
+                "title-required": "Please enter the name of the playlist.",
+                "title-tooLong": "The name of the playlist cannot be longer than 20 characters."
+            }
+        },
+        "delete": {
+            "title": "Delete Playlist",
+            "description": "Are you sure you want to delete the playlist '{{name}}'?",
+            "pending": "Deleting the playlist...",
+            "success": "The playlist has been deleted.",
+            "error": "Failed to delete the playlist."
+        },
+        "add-musics": {
+            "pending": "Adding the musics to the playlist...",
+            "success": "The musics have been added to the playlist.",
+            "error": "Failed to add the musics to the playlist."
+        },
+        "clear": {
+            "title": "Clear Playlist",
+            "description": "Are you sure you want to clear the playlist '{{name}}'?",
+            "pending": "Clearing the playlist...",
+            "success": "The playlist has been cleared.",
+            "error": "Failed to clear the playlist."
+        },
+        "rename": {
+            "title": "Rename Playlist",
+            "description": "Please enter the new name of the playlist.",
+            "placeholder": "Playlist Name",
+            "pending": "Renaming the playlist...",
+            "success": "The playlist has been renamed.",
+            "error": "Failed to rename the playlist.",
+            "errors": {
+                "title-required": "Please enter the new name of the playlist.",
+                "title-tooLong": "The new name of the playlist cannot be longer than 20 characters."
+            }
+        }
     }
 }
