--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -37,7 +37,73 @@
     },
     "common": {
         "library": "라이브러리",
+        "playlist": "재생목록",
+        "now-playing": "재생 대기열",
         "unknown-genre": "알 수 없는 장르",
-        "unknown-album": "알 수 없는 앨범"
+        "unknown-album": "알 수 없는 앨범",
+        "musicWithCount_other": "{{count}}개의 곡",
+        "musicWithCount_one": "{{count}}개의 곡",
+        "selectedCount_other": "{{count}}개 항목 선택됨",
+        "selectedCount_one": "{{count}}개 항목 선택됨",
+        "clear": "비우기",
+        "create": "생성",
+        "cancel": "취소",
+        "delete": "삭제",
+        "open": "열기",
+        "add": "추가",
+        "rename": "이름 변경",
+        "play-all": "전체 재생",
+        "play-selected": "선택 재생",
+        "shuffle-all": "무작위 재생"
+    },
+    "playlist": {
+        "create": {
+            "title": "새 재생목록 추가",
+            "description": "추가할 재생목록의 이름을 입력하세요.",
+            "placeholder": "재생목록 이름",
+            "pending": "재생목록 추가 중...",
+            "success": "재생목록이 추가되었습니다.",
+            "error": "재생목록 추가 중 오류가 발생했습니다.",
+            "errors": {
+                "title-required": "재생목록 이름을 입력하세요.",
+                "title-too-long": "재생목록 이름은 20자를 넘을 수 없습니다."
+            }
+        },
+        "delete": {
+            "title": "재생목록 삭제",
+            "description": "이 재생목록을 삭제하시겠습니까?",
+            "pending": "재생목록 삭제 중...",
+            "success": "재생목록이 삭제되었습니다.",
+            "error": "재생목록 삭제 중 오류가 발생했습니다."
+        },
+        "add-musics": {
+            "pending": "곡 추가 중...",
+            "success": "곡이 재생목록에 추가되었습니다.",
+            "error": "곡 추가 중 오류가 발생했습니다."
+        },
+        "clear": {
+            "title": "재생목록 비우기",
+            "description": "이 재생목록을 비우시겠습니까?",
+            "pending": "재생목록 비우기 중...",
+            "success": "재생목록이 비워졌습니다.",
+            "error": "재생목록 비우기 중 오류가 발생했습니다."
+        },
+        "rename": {
+            "title": "재생목록 이름 변경",
+            "description": "변경할 재생목록의 이름을 입력하세요.",
+            "placeholder": "재생목록 이름",
+            "pending": "재생목록 이름 변경 중...",
+            "success": "재생목록 이름이 변경되었습니다.",
+            "error": "재생목록 이름 변경 중 오류가 발생했습니다.",
+            "errors": {
+                "title-required": "재생목록 이름을 입력하세요.",
+                "title-too-long": "재생목록 이름은 20자를 넘을 수 없습니다."
+            }
+        },
+        "delete-items": {
+            "pending": "재생목록 항목 삭제 중...",
+            "success": "재생목록 항목이 삭제되었습니다.",
+            "error": "재생목록 항목 삭제 중 오류가 발생했습니다."
+        }
     }
 }
