implement albums page

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,7 +2,8 @@
     "pages": {
         "home": "Home",
         "settings": "Settings",
-        "musics": "Musics"
+        "musics": "Musics",
+        "albums": "Albums"
     },
     "settings": {
         "library": {
