--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -2,7 +2,8 @@
     "pages": {
         "home": "홈",
         "settings": "설정",
-        "musics": "음악"
+        "musics": "음악",
+        "albums": "앨범"
     },
     "settings": {
         "library": {
