--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -39,6 +39,7 @@
     "common": {
         "library": "라이브러리",
         "playlist": "재생목록",
+        "album": "앨범",
         "now-playing": "재생 대기열",
         "unknown-genre": "알 수 없는 장르",
         "unknown-album": "알 수 없는 앨범",
