--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,7 +2,8 @@
     "pages": {
         "home": "Home",
         "settings": "Settings",
-        "musics": "Musics"
+        "musics": "Musics",
+        "albums": "Albums"
     },
     "settings": {
         "library": {
@@ -38,6 +39,7 @@
     "common": {
         "library": "Library",
         "playlist": "Playlist",
+        "album": "Album",
         "now-playing": "Now Playing",
         "unknown-genre": "Unknown Genre",
         "unknown-album": "Unknown Album",
