implement artists list page

--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -3,7 +3,8 @@
         "home": "홈",
         "settings": "설정",
         "musics": "음악",
-        "albums": "앨범"
+        "albums": "앨범",
+        "artists": "아티스트"
     },
     "settings": {
         "library": {
