--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -45,6 +45,8 @@
         "now-playing": "재생 대기열",
         "unknown-genre": "알 수 없는 장르",
         "unknown-album": "알 수 없는 앨범",
+        "unknown-artist": "알 수 없는 아티스트",
+        "untitled": "제목 없음",
         "musicWithCount_other": "{{count}}개의 곡",
         "musicWithCount_one": "{{count}}개의 곡",
         "albumWithCount_other": "{{count}}개의 앨범",
