implement auto complete input component

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -2,8 +2,10 @@
     "pages": {
         "home": "Home",
         "settings": "Settings",
+        "search": "Search",
         "musics": "Musics",
-        "albums": "Albums"
+        "albums": "Albums",
+        "artists": "Artists"
     },
     "settings": {
         "library": {
