--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -117,5 +117,10 @@
             "success": "재생목록 항목이 삭제되었습니다.",
             "error": "재생목록 항목 삭제 중 오류가 발생했습니다."
         }
+    },
+    "search": {
+        "errors": {
+            "undefined-error": "검색 도중 알 수 없는 오류가 발생 하였습니다."
+        }
     }
 }
