--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -66,7 +66,9 @@
         "shuffle-all": "Shuffle All",
         "album-list": "Album List",
         "artist-list": "Artist List",
-        "track-list": "Track List"
+        "track-list": "Track List",
+        "show-more": "Show More",
+        "all": "All"
     },
     "playlist": {
         "create": {
