--- a/locales/ko/translation.json
+++ b/locales/ko/translation.json
@@ -123,6 +123,10 @@
     "search": {
         "errors": {
             "undefined-error": "검색 도중 알 수 없는 오류가 발생 하였습니다."
+        },
+        "messages": {
+            "not-searched": "검색하여 라이브러리 탐색...",
+            "no-result": "'{{query}}'에 대한 검색 결과가 없습니다."
         }
     }
 }
